assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap');

/* Asterisk wildcard selector to override default styles */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    color: #ffffff;
    font-family: 'Montserrat', sans-serif;
}

h1, h2, h3 {
    font-family: "Montserrat", sans-serif;
    color: #ffffff;
    text-transform: uppercase;
    letter-spacing: 2px;
}

/* Header */
header {
    background-color: #5f376d;
    padding: 0 1rem;
    position: fixed;
    z-index: 999;
    width: 100%;
    box-shadow: 0 2px 2px #ffffff;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

header a {
    text-decoration: none;
    color: #ffffff;
}


#menu {
    font-size: 110%;
    letter-spacing: 4px;
    list-style-type: none;
}

#menu > li {
    margin-bottom: 1em;
}
.active {
    border-bottom: 1px solid #ffffff;
}

/* Nav styles with dropdown toggle */
nav {
    position: absolute;
    background-color: #5f376d;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 2px #ffffff;
    display: none;
    top: 100%;
}

#nav-toggle:checked~nav {
    display: block;
}
#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
    color: #ffffff;
}

/* main content */
main {
    flex: 1 0 auto;
    margin-top: 80px;
}

#hero {
    height: 600px;
    width: 100%;
    background: url("../images/Happy\ medic\ \(1\).jpg") no-repeat center center/cover;
    position: relative;
    padding-bottom: 10px;
}

#cover-text {
    background-color: rgba(174, 193, 181, .7);
    font-size: 130%;
    position: absolute;
    bottom: 30px;
    width: 80%;
    min-height: 200px;
    padding-top: 40px;
    padding-left: 10px;
}

#cover-text > h3 {
    color: #060f19;
}

/* Meet the team */
/* Three columns side by side */
.column {
    float: left;
    width: 33.3%;
    margin-bottom: 16px;
    padding: 0 8px;
  }
  
  /* Display the columns below each other instead of side by side on small screens */
  @media screen and (max-width: 650px) {
    .column {
      width: 100%;
      display: block;
    }
  }
  
  /* Add some shadows to create a card effect */
  .card {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  }
  
  /* Some left and right padding inside the container */
  .container {
    padding: 0 16px;
    color:#060f19;
  }
  
  .container > h2 {
    color: #060f19;
  }
  /* Clear floats */
  .container::after, .row::after {
    content: "";
    clear: both;
    display: table;
  }
  
  .title {
    color: grey;
  }

  /* Call back request */
  #callback {
    background-color: rgba(174, 193, 181);
    background-size:cover;
    background-position: 100%;
    padding: 20px 10% 0 10%;
    flex-grow: 1;
  }

  #callbackform {
    color: #060f19;
    background-color: rgba(174, 193, 181);
    padding: 30px;
  }

  #callbackform > h2 {
    color: #060f19;
    margin-bottom: 20px;
  }

  .text-input {
    background-color: #fafafa;
    color: #060f19;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border-radius: 2px;
    padding: 0 5px;
  }

  .callback-button {
    margin-top: 20px;
    border-radius: 2px;
    padding: 15px 32px;
    font-size: 100%;
    background-color: #5F376D;
    color: #fafafa;
    background-position: center;
  }
/* footer */
footer {
    background-color: #5f376d;
}

footer > h3, p {
    padding-left: 5px;
    padding-top: 5px;
}

#social-networks {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-networks i {
    font-size: 180%;
    padding: 5%;
    color: #ffffff;
}

/* media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {
    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }
    /* Menu */
    #menu {
    display:flex;
    }

    #menu > li {
        padding-left: 5rem;
    }
    #logo {
        font-size: 288%;
        line-height: 75px;
        margin: 0 0.5rem;
    }
    main {
        margin-top: 79px;
    }

    #cover-text {
        width: 400px;
        left: 50px;
    }

    #callback {
        background-position: center;
        position: relative;
    }

    #callbackform {
        max-width: 600px;
        position: absolute;
        left: 10%;
        top: 70px;
    }

    .text-input:hover {
        border-color: #060f19;
    }

    .callback-button:hover {
        background-color: #5F376D;
        border: #060f19;
        color: #060f19;
    }
}

/* Large devices (tablets and desktops, 992px and up) */
@media screen and (min-width: 992px) {
    #menu a:hover{
        border-bottom: 1px solid #ffffff;
    }
}

